Sửa lại register formrequest
